--- a/ProjetNeptune/templates/base.html.twig
+++ b/ProjetNeptune/templates/base.html.twig
@@ -10,7 +10,7 @@
 	    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 		{% endblock %}
 		<title>
-			{% block title %}Shopshop{% endblock %}
+			{% block title %}HotelNeptune{% endblock %}
 		</title>
 	</head>
 	<body class="bg-white">
@@ -28,19 +28,10 @@
           </a>
         </li>
         <li class="nav-item">
-        	<a class="nav-link" href=</a>
+        	<a class="nav-link" href="index.php?page=chambres">Chambres</a>
         </li>
         <li class="nav-item">
-        	<a class="nav-link" href=</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href=</a>
-        </li>
-        <li>
-          <a class="nav-link" href=</a>
-        </li>
-         <li>
-          <a class="nav-link" href=</a>
+        	<a class="nav-link" href="index.php?page=connexion">Connexion</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
